# every-note

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/desktop/: README.md
apps/mobile/: README.md
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: DashboardPanel.tsx  SearchPalette.tsx
apps/web/src/hooks/: useNoteEditor.ts  useReminders.ts  useRouter.ts
apps/web/src/lib/: api.ts  checklist.ts  router.ts  statuses.ts  templates.ts
apps/web/src/stores/: finance-store.ts  folders-store.ts  notes-store.ts  projects-store.ts  tags-store.ts  ui-store.ts
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: attachments.py  daily.py  export.py  finance.py  folders.py  graph.py  notes.py  projects.py  reminders.py  search.py  tags.py
docs/plans/: 2026-03-01-adaptive-split-layout.md  2026-03-01-finance-module-design.md  2026-03-01-finance-module-plan.md  2026-03-01-notes-vs-tasks-separation.md  2026-03-01-scheduled-summary-notifications.md  2026-03-02-modal-editor-redesign.md  2026-03-08-project-scoped-tags.md
frontend/: package-lock.json  vite.config.ts
frontend/src/components/: SearchPalette.tsx
frontend/src/components/board/: BoardView.tsx
frontend/src/components/calendar/: CalendarView.tsx
frontend/src/components/editor/: Backlinks.tsx  ChecklistEditor.tsx  (+2 more)
frontend/src/lib/: checklist.ts
frontend/src/stores/: notes-store.ts  tags-store.ts  ui-store.ts
(+32 files in other folders)
